--- a/inji-web-test/pom.xml
+++ b/inji-web-test/pom.xml
@@ -56,6 +56,16 @@
       <version>LATEST</version>
       <scope>compile</scope>
     </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.7.1</version>
+        </dependency>
 	</dependencies>
   
   <build>
