--- a/inji-web/package.json
+++ b/inji-web/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/crypto-js": "^4.2.2",
     "@types/jest": "^27.5.2",
@@ -15,7 +17,6 @@
     "autoprefixer": "^9.8.6",
     "crypto-js": "^4.2.0",
     "i18next": "^23.11.2",
-    "inji-web": "file:",
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
