--- a/helm/inji-web/Chart.yaml
+++ b/helm/inji-web/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: injiweb
 description: A Helm chart for MOSIP injiweb UI module
 type: application
-version: 0.10.0
+version: 0.10.0-develop
 appVersion: ""
 dependencies:
   - name: common
