--- a/.github/workflows/browserstack-web.yml
+++ b/.github/workflows/browserstack-web.yml
@@ -17,13 +17,16 @@ on:
       - develop
 
 jobs:
-  setup-wireguard:
+  inji-web-test:
     runs-on: ubuntu-latest
+
     steps:
       - name: Set up WireGuard tunnel
         run: |
           sudo apt-get update
           sudo apt-get install -y wireguard-tools resolvconf
+          
+          # Create WireGuard configuration file
           echo "[Interface]
           PrivateKey = ${{ secrets.WG_PRIVATE_KEY }}
           Address = 10.0.0.2/24
@@ -34,22 +37,18 @@ jobs:
           AllowedIPs = 0.0.0.0/0
           Endpoint = ${{ secrets.WG_SERVER_ADDRESS }}
           PersistentKeepalive = 25" | sudo tee /etc/wireguard/wg0.conf > /dev/null
-          sudo wg-quick up wg0
+
+          # Manually bring up the interface (without systemd)
+          sudo ip link add dev wg0 type wireguard
+          sudo wg setconf wg0 /etc/wireguard/wg0.conf
+          sudo ip link set wg0 up
+          sudo ip address add 10.0.0.2/24 dev wg0
 
       - name: Verify WireGuard status
         run: |
           sudo wg show
+          sudo ip link show wg0
 
-  inji-web-test:
-    needs: setup-wireguard
-    uses: mosip/kattu/.github/workflows/browserstack-web.yml@master-java21
-    with:
-      SERVICE_LOCATION: inji-web-test
-      BUILD_ARTIFACT: test-output
-    secrets:
-      BROWSERSTACK_USERNAME: ${{ secrets.BROWSERSTACK_USERNAME }}
-      BROWSERSTACK_ACCESS_KEY: ${{ secrets.BROWSERSTACK_ACCESS_KEY }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: ${{ secrets.AWS_REGION }}
-      S3_BUCKET: ${{ secrets.S3_BUCKET }}
+
+
+
