--- a/.github/workflows/browserstack-web.yml
+++ b/.github/workflows/browserstack-web.yml
@@ -29,8 +29,7 @@ jobs:
           # Create WireGuard configuration file
           echo "[Interface]
           PrivateKey = ${{ secrets.WG_PRIVATE_KEY }}
-          Address = 10.13.13.146/32
-          DNS = 8.8.8.8
+          ListenPort = 51820
 
           [Peer]
           PublicKey = ${{ secrets.WG_SERVER_PUBLIC_KEY }}
@@ -42,7 +41,7 @@ jobs:
           sudo ip link add dev wg0 type wireguard
           sudo wg setconf wg0 /etc/wireguard/wg0.conf
           sudo ip link set wg0 up
-          sudo ip address add 10.0.0.2/24 dev wg0
+          sudo ip address add 10.13.13.146/32 dev wg0
 
       - name: Verify WireGuard status
         run: |
