--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -5,16 +5,19 @@ services:
     container_name: nginx
     image: nginx:alpine
     ports:
-      - '80:80'
+      - '8080:80'
     volumes:
       - ./config/mimoto-issuers-config.json:/config/server/mimoto-issuers-config.json
       - ./config/mimoto-trusted-verifiers.json:/config/server/mimoto-trusted-verifiers.json
       - ./config/credential-template.html:/config/server/credential-template.html
       - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - mimoto-service
+
 
   mimoto-service:
     container_name: 'mimoto-service'
-    image: 'mosipid/mimoto:0.14.0'
+    image: mimoto:local #'mosipid/mimoto:0.14.0'
     user: root
     ports:
       - '8099:8099'
@@ -28,19 +31,6 @@ services:
       - ./config/mimoto-issuers-config.json:/home/mosip/mimoto-issuers-config.json
       - ./config/mimoto-trusted-verifiers.json:/home/mosip/mimoto-trusted-verifiers.json
       - ./certs/oidckeystore.p12:/home/mosip/certs/oidckeystore.p12
-    depends_on:
-      - nginx
-
-  inji-web-proxy:
-    container_name: 'inji-web-proxy'
-    image: inji-web-proxy:local
-    ports:
-      - '3010:3010'
-    environment:
-      - MIMOTO_HOST=http://mimoto-service:8099/v1/mimoto
-      - PORT=3010
-    depends_on:
-      - mimoto-service
 
   inji-web:
     container_name: 'inji-web'
@@ -49,8 +39,6 @@ services:
       - '3001:3004'
     environment:
       - DEFAULT_LANG=en
-      - MIMOTO_HOST=http://localhost:3010
+      - MIMOTO_HOST=http://localhost:8080/v1/mimoto # Pointing to the Nginx service
     depends_on:
-      - inji-web-proxy
-
-
+      - nginx
