--- a/helm/inji-web/values.yaml
+++ b/helm/inji-web/values.yaml
@@ -133,7 +133,7 @@ resources:
 additionalResources:
   ## Specify any JAVA_OPTS string here. These typically will be specified in conjunction with above resources
   ## Example: java_opts: "-Xms500M -Xmx500M"
-  #javaOpts: "-Xms750M -Xmx750M"
+  ## javaOpts: "-Xms750M -Xmx750M"
 
 ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-container
 ## Clamav container already runs as 'mosip' user, so we may not need to enable this
@@ -424,7 +424,7 @@ inji_web:
       DEFAULT_FEVICON: 'favicon.ico'
       DEFAULT_TITLE: 'Inji Wallet'
       MIMOTO_HOST: 'https://injiweb.sandbox.xyz.net/v1/mimoto'
-      
+
 ## We create a gateway for esignet specific URL(s) listed under `hosts`
 istio:
   enabled: true
