--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -14,7 +14,7 @@ services:
 
   datashare:
     container_name: 'datashare-service'
-    image: mosipqa/data-share-service:1.3.x
+    image: mosipid/data-share-service:1.3.0-beta.2
     ports:
       - "8097:8097"
     environment:
@@ -29,7 +29,7 @@ services:
 
   mimoto-service:
     container_name: 'mimoto-service'
-    image: 'mosipqa/mimoto:0.15.x'
+    image: 'mosipid/mimoto:0.15.0'
     user: root
     ports:
       - '8099:8099'
