--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -47,7 +47,7 @@ services:
 
   inji-web:
     container_name: 'inji-web'
-    image: inji-web:local
+    image: mosipid/inji-web:0.11.0
     ports:
       - '3004:3004'
     environment:
