--- a/docker-compose/config/mimoto-default.properties
+++ b/docker-compose/config/mimoto-default.properties
@@ -289,4 +289,8 @@ mosip.data.share.create.retry.count=3
 #OpenId4VP related Configuration END
 
 #Caffeine cache related configurations
-cache.expiry.time.in.min = 60
+cache.credential.issuer.config.expiry-time-in-min = 60
+cache.credential.issuer.wellknown.response.expiry-time-in-min = 60
+cache.issuers.config.expiry-time-in-min = 60
+cache.credential.issuer.authserver.wellknown.response.expiry-time-in-min = 60
+cache.default.expiry-time-in-min = 60 
