--- a/helm/inji-web/Chart.yaml
+++ b/helm/inji-web/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: injiweb
+name: inji-web
 description: A Helm chart for MOSIP injiweb UI module
 type: application
 version: 0.11.1
