--- a/ui-test/Dockerfile
+++ b/ui-test/Dockerfile
@@ -42,7 +42,8 @@ RUN mkdir -p /home/mosip/src/test/resources/config/
 RUN mkdir -p /home/mosip/test-output/SparkReport/
 RUN chmod -R 777 /home/mosip/test-output
 
-RUN mkdir -p /home/mosip/screenshots/
+RUN chmod 644 /home/mosip/screenshots/*.png
+
 
 
 
