--- a/ui-test/src/test/resources/config/Kernel.properties
+++ b/ui-test/src/test/resources/config/Kernel.properties
@@ -24,19 +24,19 @@ policytest_userName=111998
 #IDREPO
 mosip_idrepo_app_id=idrepo
 mosip_idrepo_client_id=mosip-idrepo-client
-mosip_idrepo_client_secret=qKNTW5CTxKsgVGjw
+mosip_idrepo_client_secret=
 #admin
 mosip_admin_app_id=admin
 admin_password=mosip123
 admin_userName=220005
 mosip_admin_client_id=mosip-admin-client
-mosip_admin_client_secret=auWjWiniqX0YX8KF
+mosip_admin_client_secret=
 #admin
 admin_zone_password=mosip123
 admin_zone_userName=globaladmin
 mosip_regclient_app_id=registrationclient
 mosip_reg_client_id=mosip-reg-client
-mosip_reg_client_secret=Msc7sItq6Rg8vcEC
+mosip_reg_client_secret=
 #This credentials are used to execute auth demo service
 new_Resident_User=111995
 new_Resident_Password=mosip123
@@ -45,11 +45,11 @@ roles.111995=PARTNER_ADMIN,default-roles-mosip
 
 
 keycloak_UserName = admin
-keycloak_Password = DyWRaJqTFh
+keycloak_Password =
 
 keycloak-external-url=https://iam.released.mosip.net
 mosip_testrig_client_id=mosip-testrig-client
-mosip_testrig_client_secret=G9qAJ3SrOm575GqL
+mosip_testrig_client_secret=
 
 keycloak-realm-id=mosip
 iam-users-to-create=220005,globaladmin
@@ -72,7 +72,7 @@ DB_PORT=
 installation-domain=
 partner_url=jdbc:postgresql://released.mosip.net:5432/mosip_ida
 partner_username=postgres
-partner_password=WfJpMctLjp
+partner_password=
 partner_default_schema=partner
 reportLogPath=automationLogAndReport
 #--------minio proprties----------------
@@ -101,7 +101,7 @@ hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql=true
 hibernate.current_session_context_class=thread
 db-su-user=postgres
-postgresql-password=WfJpMctLjp
+postgresql-password=
 pms_db_schema=pms
 km_db_schema=keymgr
 master_db_schema=master
