--- a/ui-test/Dockerfile
+++ b/ui-test/Dockerfile
@@ -57,7 +57,7 @@ COPY --chown=${container_user}:${container_user} ./src/main/resources/ /home/mos
 COPY --chown=${container_user}:${container_user} ./src/test/resources/extent.properties /home/mosip/src/test/resources/extent.properties
 COPY --chown=${container_user}:${container_user} ./src/main/java/utils/ /home/mosip/src/main/java/utils/
 COPY --chown=${container_user}:${container_user} ./screenshots/ /home/mosip/screenshots/
-COPY --chown=${container_user}:${container_user} ./Biometric Devices/ /home/mosip/Biometric Devices/
+COPY --chown=${container_user}:${container_user} ./Biometric*/ /home/mosip/Biometric Devices/
 COPY --chown=${container_user}:${container_user} ./resource/ /home/mosip/resource/
 
 COPY --chown=${container_user}:${container_user} ./testNgXmlFiles/ /home/mosip/testNgXmlFiles/
