--- a/ui-test/Dockerfile
+++ b/ui-test/Dockerfile
@@ -51,6 +51,8 @@ RUN chmod -R 777 /home/mosip/screenshots/
 # Copy files
 COPY --chown=${container_user_uid}:${container_user} --chmod=771 ./entrypoint.sh ${work_dir}/entrypoint.sh
 #COPY --chown=${container_user}:${container_user} ./src/test ${work_dir}/
+COPY --chown=${container_user}:${container_user} ./application.properties $work_dir/
+COPY ["Biometric Devices", "$work_dir/Biometric Devices"]
 COPY --chown=${container_user}:${container_user} ./target $work_dir/target
 COPY --chown=${container_user}:${container_user} ./src/test/resources/TestNg.xml /home/mosip/TestNg.xml
 COPY --chown=${container_user}:${container_user} ./src/test/resources/featurefiles/ /home/mosip/featurefiles/
@@ -58,7 +60,7 @@ COPY --chown=${container_user}:${container_user} ./src/main/resources/ /home/mos
 COPY --chown=${container_user}:${container_user} ./src/test/resources/extent.properties /home/mosip/src/test/resources/extent.properties
 COPY --chown=${container_user}:${container_user} ./src/main/java/utils/ /home/mosip/src/main/java/utils/
 COPY --chown=${container_user}:${container_user} ./screenshots/ /home/mosip/screenshots/
-COPY --chown=${container_user}:${container_user} ./BiometricDevices/ /home/mosip/BiometricDevices/
+#COPY --chown=${container_user}:${container_user} ./BiometricDevices/ /home/mosip/BiometricDevices/
 COPY --chown=${container_user}:${container_user} ./resource/ /home/mosip/resource/
 
 COPY --chown=${container_user}:${container_user} ./testNgXmlFiles/ /home/mosip/testNgXmlFiles/
