--- a/ui-test/pom.xml
+++ b/ui-test/pom.xml
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.9</version>  <!-- Ensure this matches logback version -->
+            <version>2.0.9</version>
         </dependency>
         <!-- Cucumber Dependencies -->
         <dependency>
