[MOSIP-40792] updated configmap name
Signed-off-by: Rakshithb1 <rakshit.b@technoforte.co.in>

--- a/deploy/datashare-values.yaml
+++ b/deploy/datashare-values.yaml
@@ -1,6 +1,6 @@
 # Override the envFrom field to exclude 'artifactory-share'
 extraEnvVarsCM:
-  - global
+  - inji-stack-config
   - config-server-share
 
 istio:
