--- a/helm/inji-web/values.yaml
+++ b/helm/inji-web/values.yaml
@@ -245,7 +245,7 @@ extraEnvVars: []
 ## ConfigMap with extra environment variables
 ##
 extraEnvVarsCM:
-  - global
+  - inji-stack-config
   - injiweb-ui
 
 ## Secret with extra environment variables
