--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -29,7 +29,7 @@ services:
 
   mimoto-service:
     container_name: 'mimoto-service'
-    image: 'mosipqa/mimoto:0.17.x'
+    image: 'mosipid/mimoto:0.17.0'
     user: root
     ports:
       - '8099:8099'
@@ -47,7 +47,7 @@ services:
 
   inji-web:
     container_name: 'inji-web'
-    image: 'mosipqa/inji-web:0.12.x'
+    image: 'mosipid/inji-web:0.12.0'
     ports:
       - '3004:3004'
     environment:
