--- a/ui-test/pom.xml
+++ b/ui-test/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.mosip.injiweb</groupId>
     <artifactId>uitest-injiweb</artifactId>
-    <version>0.12.0-SNAPSHOT</version>
+    <version>0.12.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
