--- a/inji-web/package.json
+++ b/inji-web/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/zoom": "^3.12.0",
     "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/crypto-js": "^4.2.2",
