--- a/docker-compose/config/mimoto-default.properties
+++ b/docker-compose/config/mimoto-default.properties
@@ -264,6 +264,7 @@ mosip.authmanager.base-url=${mosip.kernel.authmanager.url}/v1/authmanager
 mosip.authmanager.client-token-endpoint=${mosip.authmanager.base-url}/authenticate/clientidsecretkey
 auth.server.admin.validate.url=${mosip.kernel.authmanager.url}/v1/authmanager/authorize/admin/validateToken
 
+
 # in minutes
 mosip.iam.adapter.validate-expiry-check-rate=1440
 
@@ -303,10 +304,11 @@ mosip.openid.verifiers=mimoto-trusted-verifiers.json
 #Inji Web Config
 mosip.inji.web.url=http://localhost:3004
 mosip.inji.web.redirect.url=${mosip.inji.web.url}/authorize
+mosip.inji.web.authentication.success.redirect.url=${mosip.inji.web.url}/user/passcode
 mosip.inji.qr.data.size.limit=10000
 mosip.inji.qr.code.height=650
 mosip.inji.qr.code.width=650
-mosip.inji.user.wallet.pin.validation.regex=^\\d{4,6}$
+mosip.inji.user.wallet.pin.validation.regex=^\\d{6}$
 mosip.inji.user.wallet.name.validation.regex=^[A-Za-z0-9 _.-]{0,50}$
 
 #OVP Config
@@ -342,6 +344,11 @@ spring.security.oauth2.client.provider.google.authorization-uri=https://accounts
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 spring.security.oauth2.client.provider.google.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
+spring.security.oauth2.client.provider.google.userNameAttribute=sub
+spring.security.oauth2.client.provider.google.nameAttribute=name
+spring.security.oauth2.client.provider.google.emailAttribute=email
+spring.security.oauth2.client.provider.google.pictureAttribute=picture
+spring.security.oauth2.client.provider.google.phoneNumberAttribute=phone_number
 
 #database config
 spring.datasource.url=${SPRING_DATASOURCE_URL}
@@ -351,13 +358,19 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+#Redis config
 spring.session.store-type=redis
 spring.data.redis.host=${SPRING_REDIS_HOST}
 spring.data.redis.port=${SPRING_REDIS_PORT}
 server.servlet.session.timeout=30m
 spring.session.redis.namespace=injiweb:session:
-#Redis config
+
 mosip.security.ignore-auth-urls=/safetynet/**,/actuator/**,/swagger-ui/**,/v3/api-docs/**,\
   /allProperties,/credentials/**,/credentialshare/**,/binding-otp,/wallet-binding,/get-token/**,\
-  /issuers,/issuers/**,/authorize,/req/otp,/vid,/req/auth/**,/req/individualId/otp,/aid/get-individual-id,/users/me/cache,\
+  /issuers,/issuers/**,/authorize,/req/otp,/vid,/req/auth/**,/req/individualId/otp,/aid/get-individual-id,\
  /verifiers, /auth/*/token-login
+
+mosip.inji.app.id=MIMOTO
+mosip.inji.encryption.algorithm=AES
+mosip.inji.encryption.key.size=256
+mosip.inji.jwt.default.algorithm=RS256
