--- a/inji-web/package.json
+++ b/inji-web/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-pdf-viewer/core": "^3.12.0",
-    "@react-pdf-viewer/zoom": "^3.12.0",
     "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/crypto-js": "^4.2.2",
@@ -27,6 +25,7 @@
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-outside-click-handler": "^1.3.0",
+    "react-pdf": "^9.2.1",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
@@ -64,6 +63,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1"
+    "@testing-library/react": "^16.0.1",
+    "resize-observer-polyfill": "^1.5.1"
   }
 }
