--- a/ui-test/src/test/resources/config.properties
+++ b/ui-test/src/test/resources/config.properties
@@ -1,2 +1,9 @@
+#Thu Jun 12 12:25:01 IST 2025
+google.client.id=
+google.client.secret=
+google.refresh.token=
+injiweb.base.url=https://injiweb.qa-inji1.mosip.net/
+injiweb.cookie.name=SESSION
+injiweb.token.login.url=https://injiweb.qa-inji1.mosip.net/v1/mimoto/auth/google/token-login
 issuerSearchText=National Identity Department (Released)
 issuerSearchTextforSunbird=StayProtected Insurance
