UI automation for INJIWEB-1535,INJIWEB-1538,INJIWEB-1538,INJIWEB-1543,INJIWEB-1544,INJIWEB-1527
Signed-off-by: maheswaras <maheswara.s@cyberpwn.com>

--- a/ui-test/src/test/resources/config.properties
+++ b/ui-test/src/test/resources/config.properties
@@ -1,9 +1,6 @@
-#Thu Jun 12 12:25:01 IST 2025
-google.client.id=
-google.client.secret=
-google.refresh.token=
-injiweb.base.url=https://injiweb.qa-inji1.mosip.net/
-injiweb.cookie.name=SESSION
-injiweb.token.login.url=https://injiweb.qa-inji1.mosip.net/v1/mimoto/auth/google/token-login
+MOSIP_INJIWEB_GOOGLE_CLIENT_ID=
+MOSIP_INJIWEB_GOOGLE_CLIENT_SECRET=
+MOISP_INJIWEB_GOOGLE_REFRESH_TOKEN=
+mosip.inji.web.url=
 issuerSearchText=National Identity Department (Released)
 issuerSearchTextforSunbird=StayProtected Insurance
