--- a/ui-test/src/test/resources/config.properties
+++ b/ui-test/src/test/resources/config.properties
@@ -2,5 +2,5 @@ MOSIP_INJIWEB_GOOGLE_CLIENT_ID=
 MOSIP_INJIWEB_GOOGLE_CLIENT_SECRET=
 MOISP_INJIWEB_GOOGLE_REFRESH_TOKEN=
 mosip.inji.web.url=
-issuerSearchText=National Identity Department (Released)
+issuerSearchText=National Identity Department
 issuerSearchTextforSunbird=StayProtected Insurance
