[MOSIP-42122] Updated values.yaml for injiweb
Signed-off-by: Abhishek S <127825992+abhishek8shankar@users.noreply.github.com>

--- a/helm/inji-web/values.yaml
+++ b/helm/inji-web/values.yaml
@@ -416,7 +416,7 @@ metrics:
 ## Slash is important!
 inji_web:
   inji_web_port: '3004'
-  inji_web_service_host: 'mimoto.mimoto'
+  inji_web_service_host: 'mimoto.injiweb'
   configmaps:
     injiweb-ui:
       DEFAULT_THEME: ''
