--- a/inji-web/package.json
+++ b/inji-web/package.json
@@ -13,6 +13,7 @@
     "@types/react-outside-click-handler": "^1.3.3",
     "@types/react-redux": "^7.1.33",
     "autoprefixer": "^9.8.6",
+    "axios": "^1.10.0",
     "cross-env": "^7.0.3",
     "crypto-js": "^4.2.0",
     "i18next": "^23.11.2",
@@ -65,5 +66,10 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "resize-observer-polyfill": "^1.5.1"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!axios).+\\.js$"
+    ]
   }
 }
