--- a/ui-test/src/test/resources/config.properties
+++ b/ui-test/src/test/resources/config.properties
@@ -1,2 +1,5 @@
-issuerSearchText=National Identity Department (Released)
+MOSIP_INJIWEB_GOOGLE_CLIENT_ID=
+MOSIP_INJIWEB_GOOGLE_CLIENT_SECRET=
+MOSIP_INJIWEB_GOOGLE_REFRESH_TOKEN=
+issuerSearchText=National Identity Department
 issuerSearchTextforSunbird=StayProtected Insurance
