--- a/docker-compose/config/mimoto-default.properties
+++ b/docker-compose/config/mimoto-default.properties
@@ -374,3 +374,12 @@ mosip.inji.app.id=MIMOTO
 mosip.inji.encryption.algorithm=AES
 mosip.inji.encryption.key.size=256
 mosip.inji.jwt.default.algorithm=RS256
+
+# Wallet Passcode Configuration
+# Duration (in minutes) for which the wallet remains locked after exceeding failed attempts in a cycle.
+# Must be a whole number; decimal/fractional values (e.g., 0.5) will throw an error during Mimoto launch
+wallet.passcode.retryBlockedUntil=60
+# Maximum number of failed passcode attempts allowed in a single cycle (defaults to 1 if <=0)
+wallet.passcode.maxFailedAttemptsAllowedPerCycle=5
+# Maximum number of lock cycles allowed before the wallet is permanently locked (defaults to 1 if <=0)
+wallet.passcode.maxLockCyclesAllowed=3
