--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       - redis-data:/data
   mimoto-service:
     container_name: 'mimoto-service'
-    image: 'mosipdev/mimoto:develop'
+    image: 'mosipid/mimoto:0.18.0'
     user: root
     ports:
       - '8099:8099'
@@ -71,7 +71,7 @@ services:
 
   inji-web:
     container_name: 'inji-web'
-    image: 'mosipdev/inji-web:develop'
+    image: 'mosipid/inji-web:0.13.0'
     ports:
       - '3004:3004'
     environment:
